--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -11,8 +11,14 @@ services:
     arguments: ['%session.storage.options%']
 
   helfi_proxy.path_processor:
-    class: Drupal\helfi_proxy\PathProcessor\SitenamePathProcessor
-    arguments: ['@language_manager', '@config.factory']
+    class: Drupal\helfi_proxy\PathProcessor\SitePrefixPathProcessor
+    arguments: ['@config.factory']
     tags:
       - { name: path_processor_inbound, priority: 200 }
-      - { name: path_processor_outbound, priority: -900 }
+      - { name: path_processor_outbound, priority: -600 }
+
+  cache_context.site_prefix:
+    class: Drupal\helfi_proxy\Cache\Context\SitePrefixCacheContext
+    arguments: ['@config.factory']
+    tags:
+      - { name: cache.context }
