--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
     "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
     "require": {
-      "league/uri": "^6.0",
+        "league/uri": "^6.0",
         "ext-libxml": "*",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "symfony/dom-crawler": "6.0.x-dev"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
