--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "league/uri": "^6.0",
         "ext-libxml": "*",
         "ext-dom": "*",
-        "symfony/dom-crawler": "6.0.x-dev"
+        "symfony/dom-crawler": "^4.0"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
