--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "league/uri": "^6.0",
         "ext-libxml": "*",
         "ext-dom": "*",
-        "symfony/dom-crawler": "^4.0"
+        "symfony/dom-crawler": "^4.0",
+        "wa72/htmlpagedom": "^2.0"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
