--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -27,6 +27,10 @@ services:
 
   helfi_proxy.tunnistamo_redirect_subscriber:
     class: Drupal\helfi_proxy\EventSubscriber\TunnistamoRedirectUrlSubscriber
-    arguments: ['@config.factory']
+    arguments: ['@helfi_proxy.hostname']
     tags:
       - { name: event_subscriber }
+
+  helfi_proxy.proxy_manager:
+    class: Drupal\helfi_proxy\ProxyManager
+    arguments: ['@config.factory', '@request_stack']
