--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
     "require": {
+        "php": "^8.0",
         "league/uri": "^6.0",
         "ext-libxml": "*",
         "ext-dom": "*",
