Instructions how to enable varnish cache, copied default purge configurations, purge everything page

--- a/helfi_proxy.routing.yml
+++ b/helfi_proxy.routing.yml
@@ -5,3 +5,11 @@ helfi_proxy.front:
     _controller: '\Drupal\helfi_proxy\Controller\FrontController::index'
   requirements:
     _access: 'TRUE'
+
+helfi_proxy.purge:
+  path: '/admin/config/development/performance/helfi_proxy/purge'
+  defaults:
+    _title: 'Purge everything'
+    _form: 'Drupal\helfi_proxy\Form\PurgeForm'
+  requirements:
+    _permission: 'administer site configuration'
