--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "league/uri": "^6.0",
         "drupal/purge": "^3.0",
+        "drupal/varnish_purge": "^2.1",
         "ext-libxml": "*",
         "ext-dom": "*",
         "symfony/dom-crawler": "^4.0",
