--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -34,3 +34,9 @@ services:
   helfi_proxy.proxy_manager:
     class: Drupal\helfi_proxy\ProxyManager
     arguments: ['@config.factory']
+
+  helfi_proxy.robots_response_subscriber:
+    class: Drupal\helfi_proxy\EventSubscriber\RobotsResponseSubscriber
+    arguments: ['@config.factory', '@path.current', '@path_alias.manager', '@path.matcher']
+    tags:
+      - { name: event_subscriber }
