--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ on: [push]
 name: CI
 env:
   SIMPLETEST_DB: "mysql://drupal:drupal@db:3306/drupal"
-  SIMPLETEST_BASE_URL: "http://127.0.0.1:8080"
+  SIMPLETEST_BASE_URL: "http://127.0.0.1:8888"
   SYMFONY_DEPRECATIONS_HELPER: disabled
 jobs:
   tests:
@@ -11,9 +11,7 @@ jobs:
       matrix:
         php-versions: ['8.0']
     container:
-      image: ghcr.io/city-of-helsinki/drupal-php-docker:${{ matrix.php-versions }}-alpine
-      volumes:
-         - /home/runner/.cache/composer:/.composer/cache
+      image: ghcr.io/city-of-helsinki/ghcr.io/city-of-helsinki/drupal-web:${{ matrix.php-versions }}
 
     services:
       db:
