--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         php-versions: ['8.0']
     container:
-      image: ghcr.io/city-of-helsinki/ghcr.io/city-of-helsinki/drupal-web:${{ matrix.php-versions }}
+      image: ghcr.io/city-of-helsinki/drupal-web:${{ matrix.php-versions }}
 
     services:
       db:
