--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         php-versions: ['8.0']
     container:
-      image: ghcr.io/city-of-helsinki/:${{ matrix.php-versions }}-alpine
+      image: ghcr.io/city-of-helsinki/drupal-php-docker:${{ matrix.php-versions }}-alpine
 
     services:
       db:
