--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
       image: ghcr.io/city-of-helsinki/drupal-php-docker:${{ matrix.php-versions }}-alpine
 
     services:
+      chrome:
+        image: ghcr.io/city-of-helsinki/drupal-chromium
+        ports:
+          - 4444:4444
       db:
         image: druidfi/db:mysql5.7-drupal
         ports:
@@ -51,5 +55,4 @@ jobs:
         run: |
           cd $DRUPAL_ROOT
           vendor/bin/drush runserver $SIMPLETEST_BASE_URL > /dev/null 2>&1 &
-          chromedriver --port=4444 > /dev/null 2>&1 &
           vendor/bin/phpunit -c $DRUPAL_ROOT/phpunit.platform.xml --verbose --group ${{ secrets.MODULE_NAME }}
