--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -1,7 +1,7 @@
 services:
   helfi_proxy.http_middleware:
     class: Drupal\helfi_proxy\HttpMiddleware\AssetHttpMiddleware
-    arguments: ['@logger.factory', '@helfi_proxy.proxy_manager']
+    arguments: ['@helfi_proxy.proxy_manager']
     tags:
       - { name: http_middleware, priority: 500 }
 
@@ -45,4 +45,4 @@ services:
     public: false
     class: Drupal\helfi_proxy\Asset\CssOptimizer
     decorates: asset.css.optimizer
-    arguments: ['@config.factory']
+    arguments: ['@helfi_proxy.proxy_manager']
