--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -16,7 +16,7 @@ services:
     tags:
       # Must be run before PathProcessorFront (200 weight).
       - { name: path_processor_inbound, priority: 201 }
-      # Must to be run after LanguageProcessorLanguage (100 weight).
+      # Must be run after LanguageProcessorLanguage (100 weight).
       - { name: path_processor_outbound, priority: 99 }
 
   cache_context.site_prefix:
