UHF-4227: Install entity earlier

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,12 @@ jobs:
         run: echo "DRUPAL_ROOT=$HOME/drupal" >> $GITHUB_ENV
 
       - name: Build project
-        run: composer create-project city-of-helsinki/drupal-helfi-platform:dev-main $DRUPAL_ROOT --no-interaction --repository https://repository.drupal.hel.ninja/
+        run: |
+          composer create-project city-of-helsinki/drupal-helfi-platform:dev-main $DRUPAL_ROOT --no-interaction --repository https://repository.drupal.hel.ninja/
+          cd $DRUPAL_ROOT
+          # Use 1.x entity module until https://www.drupal.org/project/entity/issues/3249372 is
+          # fixed.
+          composer require drupal/entity:dev-1.x#0f0bd50d8e830fdb05bfb3dae1105ed771655b56
 
       - name: Install Drupal
         run: |
@@ -38,9 +43,6 @@ jobs:
       - name: Update modules
         run: |
           cd $DRUPAL_ROOT
-          # Use 1.x entity module until https://www.drupal.org/project/entity/issues/3249372 is
-          # fixed.
-          composer require drupal/entity:dev-1.x#0f0bd50d8e830fdb05bfb3dae1105ed771655b56
           composer config repositories.5 path $GITHUB_WORKSPACE
           composer require drupal/${{ secrets.MODULE_NAME }}
           vendor/bin/drush en ${{ secrets.MODULE_NAME }} -y
