--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1']
+        php-versions: ['8.0']
     container:
       image: ghcr.io/city-of-helsinki/drupal-php-docker:${{ matrix.php-versions }}-alpine
 
@@ -41,9 +41,6 @@ jobs:
           cd $DRUPAL_ROOT
           composer config repositories.5 path $GITHUB_WORKSPACE
           composer require drupal/${{ secrets.MODULE_NAME }}
-          # Use 1.x entity module until https://www.drupal.org/project/entity/issues/3249372 is
-          # fixed.
-          composer require drupal/entity:1.x-dev@dev
           vendor/bin/drush en ${{ secrets.MODULE_NAME }} -y
 
       - name: Run PHPCS
