--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 env:
   SIMPLETEST_DB: "mysql://drupal:drupal@db:3306/drupal"
   SIMPLETEST_BASE_URL: "http://127.0.0.1:8888"
+  DRUPAL_CORE_VERSION: 9.3.x
   SYMFONY_DEPRECATIONS_HELPER: disabled
   BROWSERTEST_OUTPUT_DIRECTORY: 'sites/simpletest'
 jobs:
@@ -34,21 +35,28 @@ jobs:
         run: echo "DRUPAL_ROOT=$HOME/drupal" >> $GITHUB_ENV
 
       - name: Set module folder
-        run: echo "MODULE_FOLDER=$DRUPAL_ROOT/public/modules/contrib/${{ secrets.MODULE_NAME }}" >> $GITHUB_ENV
+        run: echo "MODULE_FOLDER=$DRUPAL_ROOT/modules/contrib/${{ secrets.MODULE_NAME }}" >> $GITHUB_ENV
 
-      - name: Build project
-        run: composer create-project city-of-helsinki/drupal-helfi-platform:dev-main $DRUPAL_ROOT --no-interaction --repository https://repository.drupal.hel.ninja/
+      - name: Clone drupal
+        run: git clone --depth 1 --branch "$DRUPAL_CORE_VERSION" http://git.drupal.org/project/drupal.git/ $DRUPAL_ROOT
+
+      - name: Install required composer dependencies
+        run: |
+          cd $DRUPAL_ROOT
+          composer config platform.php ${{ matrix.php-versions }}
+          composer config repositories.4 composer https://repository.drupal.hel.ninja/
+          composer config repositories.5 path $GITHUB_WORKSPACE
+          composer require drupal/${{ secrets.MODULE_NAME }} -W
+          composer run-script drupal-phpunit-upgrade
+          composer require "drush/drush ^10.0"
+          composer config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
+          composer require --dev donatj/mock-webserver
+          composer require --dev "drupal/coder"
 
       - name: Install Drupal
         run: |
           cd $DRUPAL_ROOT
           php -d sendmail_path=$(which true); vendor/bin/drush --yes -v site-install minimal --db-url="$SIMPLETEST_DB"
-
-      - name: Update modules
-        run: |
-          cd $DRUPAL_ROOT
-          composer config repositories.5 path $GITHUB_WORKSPACE
-          composer require drupal/${{ secrets.MODULE_NAME }}
           vendor/bin/drush en ${{ secrets.MODULE_NAME }} -y
 
       - name: Run PHPCS
@@ -67,8 +75,7 @@ jobs:
           cd $DRUPAL_ROOT
           php -d pcov.directory=$MODULE_FOLDER \
             vendor/bin/phpunit \
-            --fail-on-skipped \
-            --bootstrap $DRUPAL_ROOT/public/core/tests/bootstrap.php \
+            --bootstrap $DRUPAL_ROOT/core/tests/bootstrap.php \
             -c $MODULE_FOLDER/phpunit.xml \
             --coverage-clover=coverage.xml \
             $MODULE_FOLDER
