--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -13,7 +13,7 @@ services:
   helfi_proxy.session_configuration:
     class: Drupal\helfi_proxy\SessionConfiguration
     decorates: session_configuration
-    arguments: ['%session.storage.options%']
+    arguments: ['@helfi_proxy.proxy_manager', '%session.storage.options%']
 
   helfi_proxy.path_processor:
     class: Drupal\helfi_proxy\PathProcessor\SitePrefixPathProcessor
