--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "drupal/purge": "^3.0",
         "drupal/varnish_purge": "^2.1",
         "drupal/helfi_api_base": "*",
-        "drupal/redirect": "^1.0",
         "ext-libxml": "*",
         "ext-dom": "*"
+    },
+    "conflict": {
+        "drupal/helfi_tunnistamo": "<=2.2.1"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
