--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -7,12 +7,6 @@ services:
     class: Drupal\helfi_proxy\ActiveSitePrefix
     arguments: ['@language_manager', '@config.factory']
 
-  helfi_proxy.http_middleware:
-    class: Drupal\helfi_proxy\HttpMiddleware\AssetHttpMiddleware
-    arguments: ['@helfi_proxy.proxy_manager']
-    tags:
-      - { name: http_middleware, priority: 500 }
-
   helfi_proxy.session_configuration:
     class: Drupal\helfi_proxy\SessionConfiguration
     decorates: session_configuration
@@ -41,7 +35,7 @@ services:
 
   helfi_proxy.proxy_manager:
     class: Drupal\helfi_proxy\ProxyManager
-    arguments: ['@config.factory']
+    arguments: ['@config.factory', '@stream_wrapper_manager']
 
   helfi_proxy.robots_response_subscriber:
     class: Drupal\helfi_proxy\EventSubscriber\RobotsResponseSubscriber
