UHF-8198: Added support for LANGCODE_NOT_APPLICABLE links

--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -16,8 +16,9 @@ services:
     class: Drupal\helfi_proxy\PathProcessor\SitePrefixPathProcessor
     arguments: ['@helfi_proxy.active_prefix']
     tags:
-      # Must be run before PathProcessorFront (200 weight).
-      - { name: path_processor_inbound, priority: 201 }
+      # Must be run before PathProcessorFront (200 weight) and
+      # SitemapPathProcessor (300 weight).
+      - { name: path_processor_inbound, priority: 301 }
       # Must be run after LanguageProcessorLanguage (100 weight).
       - { name: path_processor_outbound, priority: 99 }
 
