--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "drupal/coder": "^8.3",
         "phpspec/prophecy-phpunit": "^2",
-        "drupal/simple_sitemap": "^4.1"
+        "drupal/simple_sitemap": "^4.1",
+        "drupal/helfi_tunnistamo": "*"
     }
 }
