--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/coder": "^8.3",
         "phpspec/prophecy-phpunit": "^2",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/redirect": "^1.0",
         "drupal/helfi_tunnistamo": "*"
     }
 }
