--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
           # phpunit. Copy .git folder manually so codecov can generate line by
           # line coverage.
           cp -r $GITHUB_WORKSPACE/.git $MODULE_FOLDER/
+          composer require drupal/redirect drupal/helfi_tunnistamo -W
 
       - name: Install Drupal
         working-directory: ${{ env.DRUPAL_ROOT }}
