--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,13 @@
     "conflict": {
         "drupal/helfi_tunnistamo": "<=2.2.1"
     },
+    "extra": {
+        "patches": {
+            "drupal/core": {
+                "[#3385550] Language negotiation breaks updating Drupal 9 to 10": "https://www.drupal.org/files/issues/2023-09-18/3385550-9.patch"
+            }
+        }
+    },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "drupal/coder": "^8.3",
