--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "extra": {
         "patches": {
             "drupal/core": {
-                "[#3385550] Language negotiation breaks updating Drupal 9 to 10": "patches/338550.patch"
+                "[#3385550] Language negotiation breaks updating Drupal 9 to 10": "https://raw.githubusercontent.com/City-of-Helsinki/drupal-module-helfi-proxy/ffbde3654e0011e237a17ea1cb3a7291685e0c30/patches/3385550.patch"
             }
         }
     },
