--- a/config/optional/purge.logger_channels.yml
+++ b/config/optional/purge.logger_channels.yml
@@ -21,3 +21,15 @@ channels:
       - 0
       - 2
       - 3
+  -
+    id: purger_varnish_varnish_purge_all
+    grants:
+      - 0
+      - 2
+      - 3
+  -
+    id: purger_varnish_assets
+    grants:
+      - 0
+      - 2
+      - 3
