--- a/helfi_proxy.info.yml
+++ b/helfi_proxy.info.yml
@@ -3,7 +3,7 @@ type: module
 package: Custom
 core_version_requirement: ^9 || ^10
 dependencies:
-  - path_alias
-  - redirect
+  - drupal:path_alias
+  - redirect:redirect
   - drupal:system
   - drupal:helfi_api_base
