UHF-11068: Add an event subscriber that allows other modules to commit the purge buffer.

--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -46,3 +46,9 @@ services:
       - '%helfi_proxy.valid_origin_domains%'
     tags:
       - { name: event_subscriber }
+
+  helfi_proxy.purge_queue_commit_subscriber:
+    class: Drupal\helfi_proxy\EventSubscriber\PurgeQueueCommitSubscriber
+    arguments: ['@purge.queue']
+    tags:
+      - { name: event_subscriber }
