--- a/helfi_proxy.info.yml
+++ b/helfi_proxy.info.yml
@@ -5,5 +5,6 @@ core_version_requirement: ^10 || ^11
 dependencies:
   - drupal:path_alias
   - redirect:redirect
+  - drupal:purge
   - drupal:system
   - drupal:helfi_api_base
