--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -4,6 +4,10 @@ parameters:
     - hel.fi
     - docker.so
 services:
+  _defaults:
+    autowire: true
+    autoconfigure: true
+
   helfi_proxy.active_prefix:
     class: Drupal\helfi_proxy\ActiveSitePrefix
     arguments: ['@language_manager', '@config.factory']
@@ -49,6 +53,5 @@ services:
 
   helfi_proxy.purge_queue_commit_subscriber:
     class: Drupal\helfi_proxy\EventSubscriber\PurgeQueueCommitSubscriber
-    arguments: ['@purge.queue']
     tags:
       - { name: event_subscriber }
