--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "conflict": {
         "drupal/helfi_tunnistamo": "<=2.2.1",
-        "drupal/core": "<10.3"
+        "drupal/core": "<10.3",
+        "drupal/helfi_api_base": "<2.7.25"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
