--- a/helfi_proxy.services.yml
+++ b/helfi_proxy.services.yml
@@ -51,7 +51,4 @@ services:
     tags:
       - { name: event_subscriber }
 
-  helfi_proxy.purge_queue_commit_subscriber:
-    class: Drupal\helfi_proxy\EventSubscriber\PurgeQueueCommitSubscriber
-    tags:
-      - { name: event_subscriber }
+  Drupal\helfi_proxy\EventSubscriber\PurgeQueueCommitSubscriber: ~
